--- a/index.html
+++ b/index.html
@@ -1,55 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Your Name</title>
-  <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Arupam Biswas | Life Science Researcher</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;600&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Inter', sans-serif;
+      background-color: #f4f4f9;
+      color: #333;
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      background-color: #1e293b;
+      color: white;
+      padding: 2rem;
+      text-align: center;
+    }
+    section {
+      max-width: 900px;
+      margin: 2rem auto;
+      padding: 1rem;
+    }
+    h1, h2 {
+      color: #1e293b;
+    }
+    .skills, .projects {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 1rem;
+    }
+    .card {
+      background-color: white;
+      border-radius: 1rem;
+      padding: 1.5rem;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+    }
+    a {
+      color: #2563eb;
+      text-decoration: none;
+    }
+    footer {
+      text-align: center;
+      padding: 2rem;
+      background-color: #e2e8f0;
+      font-size: 0.9rem;
+    }
+  </style>
 </head>
 <body>
   <header>
     <h1>Arupam Biswas</h1>
-    <nav>
-      <ul>
-        <li><a href="#about">About</a></li>
-        <li><a href="#research">Research</a></li>
-        <li><a href="#publications">Publications</a></li>
-        <li><a href="#cv">CV</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
+    <p>Life Science Researcher | Neuroscience & Bioinformatics</p>
+    <p><a href="mailto:arupambiswas007@gmail.com">arupambiswas007@gmail.com</a></p>
   </header>
 
-  <section id="about">
+  <section>
     <h2>About Me</h2>
-    <p>Brief introduction about yourself.</p>
+    <p>Currently a research trainee at CSIR-CCMB, I explore CNS disorders, regenerative biology, and neurogenomics. I combine experimental neuroscience with computational tools to investigate axonal regeneration and behavioral data.</p>
   </section>
 
-  <section id="research">
-    <h2>Research</h2>
-    <p>Details about your research interests and projects.</p>
-  </section>
-
-  <section id="publications">
-    <h2>Publications</h2>
+  <section>
+    <h2>Research Interests</h2>
     <ul>
-      <li><a href="link-to-publication">Publication Title</a></li>
+      <li>Spinal Cord Injury & Axon Regeneration</li>
+      <li>Stem Cell Biology & CNS Repair</li>
+      <li>Electrodermal Signal Processing</li>
+      <li>Bioinformatics of Neurological Disorders</li>
     </ul>
   </section>
 
-  <section id="cv">
-    <h2>Curriculum Vitae</h2>
-    <p><a href="link-to-cv.pdf" download>Download CV</a></p>
+  <section class="skills">
+    <div class="card">
+      <h3>Skills</h3>
+      <ul>
+        <li>Python, R, MATLAB</li>
+        <li>Neurokit2, MdRQA</li>
+        <li>High-Content Imaging</li>
+        <li>Bioinformatics Tools (Cytoscape, ClueGO, Ensembl)</li>
+      </ul>
+    </div>
+    <div class="card">
+      <h3>Techniques</h3>
+      <ul>
+        <li>Stereotactic Surgery</li>
+        <li>Neuronal Cell Culture</li>
+        <li>Confocal & High-Content Microscopy</li>
+        <li>Signal Analysis & Machine Learning</li>
+      </ul>
+    </div>
   </section>
 
-  <section id="contact">
-    <h2>Contact</h2>
-    <p>Email: your.email@example.com</p>
+  <section>
+    <h2>Projects</h2>
+    <div class="projects">
+      <div class="card">
+        <h3>Neurite Image Analysis</h3>
+        <p>Python pipeline for evaluating gene treatments in spinal cord injury.</p>
+      </div>
+      <div class="card">
+        <h3>EDA Preprocessing</h3>
+        <p>Signal processing and machine learning on physiological synchrony data using Neurokit2.</p>
+      </div>
+      <div class="card">
+        <h3>ECM Bioinformatics</h3>
+        <p>Analyzed brain extracellular matrix in Alzheimer’s, Parkinson’s, and Huntington’s diseases.</p>
+      </div>
+    </div>
+  </section>
+
+  <section>
+    <h2>Publications & Conferences</h2>
+    <ul>
+      <li><a href="https://doi.org/10.55544/jrasb.1.4.8">DIPG Molecular Analysis</a> — JRASB, 2022</li>
+      <li>IAN 2023 & 2024 Poster Presentations</li>
+      <li>CMMDR 2024 — Transcription Factors in Axon Growth</li>
+    </ul>
   </section>
 
   <footer>
-    <p>&copy; 2025 Your Name</p>
+    <p>&copy; 2025 Arupam Biswas | Built with 💻 and 🧠</p>
   </footer>
 </body>
 </html>
-
