--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
   </nav>
 
   <section class="hero">
-    <img src="6AAE16E8-D81D-41D5-BE76-7C3E88152856_1_201_a.jpg" alt="Arupam Biswas">
+    <img src="profile.jpg" alt="Arupam Biswas">
     <h2>Arupam Biswas</h2>
     <h3>Integrated M.Sc in Life Sciences</h3>
     <a href="mailto:arupambiswas007@gmail.com" class="cta">Get in Touch</a>
