--- a/index.html
+++ b/index.html
@@ -59,20 +59,20 @@
       padding: 3rem;
     }
     .hero img {
-      width: 170px;
-      height: 170px;
+      width: 250px; /* Increased size */
+      height: 250px; /* Increased size */
       border-radius: 50%;
       border: 5px solid white;
-      margin-bottom: 1.2rem;
+      margin-bottom: 1.5rem;
       object-fit: cover;
     }
     .hero h2 {
-      font-size: 3rem;
+      font-size: 4rem; /* Increased size */
       font-weight: 700;
       margin-bottom: 0.5rem;
     }
     .hero h3 {
-      font-size: 1.5rem;
+      font-size: 1.8rem; /* Slightly increased size */
       font-weight: 500;
       margin-bottom: 1rem;
     }
