--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       position: relative;
       text-align: center;
       color: #fff;
-      background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('your-background-image.jpg') no-repeat center center;
+      background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('your-profile-picture.jpg') no-repeat center center;
       background-size: cover;
       height: 100vh;
       display: flex;
@@ -57,15 +57,6 @@
       align-items: center;
       justify-content: center;
       padding: 3rem;
-    }
-    .hero img {
-      width: 230px; /* Slightly reduced width */
-      height: 230px; /* Slightly reduced height */
-      border-radius: 50%;
-      border: 5px solid white;
-      margin-bottom: 1.5rem;
-      object-fit: cover;
-      filter: none; /* Ensures there is no blur effect */
     }
     .hero h2 {
       font-size: 5rem; /* Made the name much larger */
@@ -83,12 +74,14 @@
     <h1>Welcome</h1>
     <ul>
       <li><a href="#about">About</a></li>
-      <li><a href="#research">Research</a></li>
-      <li><a href="#publications">Publications</a></li>
+      <li><a href="#research-interests">Research Interests</a></li>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="#gallery">Gallery</a></li>
+      <li><a href="#resources">Resources</a></li>
+      <li><a href="#contact">Get in Touch</a></li>
     </ul>
   </nav>
   <section class="hero">
-    <img src="your-profile-picture.jpg" alt="Profile Picture" />
     <h2>Arupam Biswas</h2>
     <h3>Neuroscience Researcher</h3>
   </section>
