--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
       text-align: center;
       color: #fff;
       background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('your-profile-picture.jpg') no-repeat center center;
-      background-size: 90%; /* Adjusted to zoom out the image */
+      background-size: 60%; /* Resized the background */
+      background-repeat: no-repeat; /* Ensures the image does not repeat */
+      background-position: center center; /* Keeps the image centered */
       height: 100vh;
       display: flex;
       flex-direction: column;
