--- a/index.html
+++ b/index.html
@@ -50,10 +50,9 @@
       text-align: center;
       color: #fff;
       background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('your-profile-picture.jpg') no-repeat center center;
-      background-size: 60%; /* Resized the background */
-      background-repeat: no-repeat; /* Ensures the image does not repeat */
-      background-position: center center; /* Keeps the image centered */
-      height: 100vh;
+      background-size: 50%; /* Zoomed out */
+      background-position: center bottom; /* Ensures the face is not visible */
+      height: 100vh; /* Ensures it fits within one screen/page */
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -66,26 +65,4 @@
       margin-bottom: 1rem;
     }
     .hero h3 {
-      font-size: 2.5rem; /* Made the title much larger */
-      font-weight: 500;
-    }
-  </style>
-</head>
-<body>
-  <nav>
-    <h1>Welcome</h1>
-    <ul>
-      <li><a href="#about">About</a></li>
-      <li><a href="#research-interests">Research Interests</a></li>
-      <li><a href="#projects">Projects</a></li>
-      <li><a href="#gallery">Gallery</a></li>
-      <li><a href="#resources">Resources</a></li>
-      <li><a href="#contact">Get in Touch</a></li>
-    </ul>
-  </nav>
-  <section class="hero">
-    <h2>Arupam Biswas</h2>
-    <h3>Neuroscience Researcher</h3>
-  </section>
-</body>
-</html>
+      font-size: 2.5rem; /* Made the title much larger
