--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <title>Arupam Biswas | Neuroscience Research</title>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet" />
   <style>
@@ -74,7 +74,7 @@
       align-items: center;
     }
     .hero .profile-image img {
-      width: 90%; /* Adjusted size */
+      width: 90%;
       max-width: 500px;
       border-radius: 10px;
       object-fit: cover;
