--- a/index.html
+++ b/index.html
@@ -188,12 +188,15 @@
   <section class="get-in-touch" id="contact">
     <div class="contact-info">
       <h2>Get in Touch</h2>
-      <p><strong>Email:</strong> anisha@ccmb.res.in</p>
+      <p><strong>Email:</strong> arupambiswas007@gmail.com</p>
       <p><strong>Lab:</strong> Dr Ishwariya Venkatesh, <a href="https://www.ccmb.res.in/research/labs/venkatesh-lab" target="_blank">Venkatesh Lab</a> CSIR-CCMB</p>
       <p><strong>Address:</strong><br>
-        Centre for Cellular and Molecular Biology (CSIR-CCMB)<br>
-        Habsiguda, Hyderabad<br>
-        Telangana 500007, India
+        Institute for Developmental Biology and Neurobiology(iDN)<br>
+        Johannes Gutenberg University Mainz<br>
+        Biozentrum 1<br>
+        Hanns-Dieter-Hüsch-Weg 15<br>
+        55128 Mainz<br>
+        Germany
       </p>
       <p>
         Feel free to reach out regarding research collaborations, speaking engagements, or questions about my work. I'm always open to discussing new ideas and potential partnerships.
