--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     }
     nav h1 {
       font-weight: 700;
@@ -191,7 +191,7 @@
       <p><strong>Email:</strong> arupambiswas007@gmail.com</p>
       <p><strong>Lab:</strong> Dr Ishwariya Venkatesh, <a href="https://www.ccmb.res.in/research/labs/venkatesh-lab" target="_blank">Venkatesh Lab</a> CSIR-CCMB</p>
       <p><strong>Address:</strong><br>
-        Institute for Developmental Biology and Neurobiology(iDN)<br>
+        Institute for Developmental Biology and Neurobiology (iDN)<br>
         Johannes Gutenberg University Mainz<br>
         Biozentrum 1<br>
         Hanns-Dieter-Hüsch-Weg 15<br>
