--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Arupam Biswas | Neuroscience Research</title>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4fP4TfFf8H6FZtW1G9zKTLzE5WSu+8JqZ8t0l5NUP0p5bD9F00o5lCYa5Fj1cB5d+9Pw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <style>
     * {
       box-sizing: border-box;
@@ -23,7 +22,7 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     }
     nav h1 {
       font-weight: 700;
@@ -109,42 +108,6 @@
     .contact-info a:hover {
       text-decoration: underline;
     }
-    .social-links {
-      margin-top: 2rem;
-      display: flex;
-      gap: 1rem;
-    }
-    .social-icon {
-      width: 50px;
-      height: 50px;
-      background-color: #ffffff;
-      border-radius: 50%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-    }
-    .social-icon i {
-      font-size: 1.5rem;
-      color: #0f172a;
-    }
-    .social-icon:hover {
-      transform: scale(1.1);
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-    }
-    .social-icon.facebook:hover i {
-      color: #1877f2;
-    }
-    .social-icon.instagram:hover i {
-      color: #e4405f;
-    }
-    .social-icon.linkedin:hover i {
-      color: #0077b5;
-    }
-    .social-icon.twitter:hover i {
-      color: #1da1f2;
-    }
     .contact-form form {
       display: flex;
       flex-direction: column;
@@ -224,20 +187,6 @@
       <p>
         Feel free to reach out regarding research collaborations, speaking engagements, or questions about my work. I'm always open to discussing new ideas and potential partnerships.
       </p>
-      <div class="social-links">
-        <a href="https://www.facebook.com" target="_blank" aria-label="Facebook">
-          <div class="social-icon facebook"><i class="fab fa-facebook-f"></i></div>
-        </a>
-        <a href="https://www.instagram.com" target="_blank" aria-label="Instagram">
-          <div class="social-icon instagram"><i class="fab fa-instagram"></i></div>
-        </a>
-        <a href="https://www.linkedin.com" target="_blank" aria-label="LinkedIn">
-          <div class="social-icon linkedin"><i class="fab fa-linkedin-in"></i></div>
-        </a>
-        <a href="https://www.twitter.com" target="_blank" aria-label="X (formerly Twitter)">
-          <div class="social-icon twitter"><i class="fab fa-twitter"></i></div>
-        </a>
-      </div>
     </div>
     <div class="contact-form">
       <h2>Contact Me</h2>
