--- a/index.html
+++ b/index.html
@@ -139,10 +139,19 @@
     .contact-form button:hover {
       background-color: #1e40af;
     }
-    @media (max-width: 768px) {
-      .contact-info, .contact-form {
-        width: 100%;
-      }
+    .footer {
+      text-align: center;
+      padding: 2rem;
+      background: #f3f4f6;
+    }
+    .footer a img {
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      transition: transform 0.3s ease;
+    }
+    .footer a img:hover {
+      transform: scale(1.1);
     }
   </style>
 </head>
@@ -207,5 +216,10 @@
       </form>
     </div>
   </section>
+  <footer class="footer">
+    <a href="https://www.instagram.com" target="_blank">
+      <img src="path-to-your-instagram-logo/instagram-logo.png" alt="Instagram Logo">
+    </a>
+  </footer>
 </body>
 </html>
