--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
   </section>
   <footer class="footer">
     <a href="https://www.instagram.com" target="_blank">
-      <img src="path-to-your-instagram-logo/instagram-logo.png" alt="Instagram Logo">
+      <img src="instagram.jpg" alt="Instagram Logo">
     </a>
   </footer>
 </body>
