--- a/index.html
+++ b/index.html
@@ -110,10 +110,12 @@
     }
     .social-links {
       margin-top: 2rem;
+      display: flex;
+      gap: 1.5rem;
     }
     .social-links a img {
-      width: 50px;
-      height: 50px;
+      width: 80px; /* Increased size */
+      height: 80px; /* Increased size */
       border-radius: 50%;
       transition: transform 0.3s ease;
     }
@@ -200,8 +202,17 @@
         Feel free to reach out regarding research collaborations, speaking engagements, or questions about my work. I'm always open to discussing new ideas and potential partnerships.
       </p>
       <div class="social-links">
+        <a href="https://www.facebook.com" target="_blank">
+          <img src="facebook.jpg" alt="Facebook Logo">
+        </a>
         <a href="https://www.instagram.com" target="_blank">
           <img src="instagram.jpg" alt="Instagram Logo">
+        </a>
+        <a href="https://www.linkedin.com" target="_blank">
+          <img src="linkedIn.jpg" alt="LinkedIn Logo">
+        </a>
+        <a href="https://www.twitter.com" target="_blank">
+          <img src="X logo.jpg" alt="X Logo">
         </a>
       </div>
     </div>
