--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
       gap: 1.5rem;
     }
     .social-links a img {
-      width: 80px; /* Increased size */
-      height: 80px; /* Increased size */
+      width: 100px; /* Set uniform size here */
+      height: 100px; /* Set uniform size here */
       border-radius: 50%;
       transition: transform 0.3s ease;
     }
