--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
           <img src="instagram.jpg" alt="Instagram Logo">
         </a>
         <a href="https://www.linkedin.com" target="_blank">
-          <img src="linkedin.jpg" alt="LinkedIn Logo">
+          <img src="linkedIn.jpg" alt="LinkedIn Logo">
         </a>
         <a href="https://www.twitter.com" target="_blank">
           <img src="X logo.jpg" alt="X Logo">
