--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
           <img src="linkedIn.jpg" alt="LinkedIn Logo">
         </a>
         <a href="https://www.twitter.com" target="_blank">
-          <img src="X logo.jpg" alt="X Logo">
+          <img src="twitter.jpg" alt="X Logo">
         </a>
       </div>
     </div>
