--- a/index.html
+++ b/index.html
@@ -209,10 +209,10 @@
           <img src="instagram.jpg" alt="Instagram Logo">
         </a>
         <a href="https://www.linkedin.com" target="_blank">
-          <img src="linkedIn.jpg" alt="LinkedIn Logo">
+          <img src="linkedInF.jpg" alt="LinkedIn Logo">
         </a>
         <a href="https://www.twitter.com" target="_blank">
-          <img src="twitter.jpg" alt="X Logo">
+          <img src="ntwitter.jpg" alt="X Logo">
         </a>
       </div>
     </div>
