--- a/index.html
+++ b/index.html
@@ -113,9 +113,15 @@
       display: flex;
       gap: 1.5rem;
     }
+    .social-links a {
+      display: inline-block;
+      width: 100px; /* Container width */
+      height: 100px; /* Container height */
+    }
     .social-links a img {
-      width: 100px; /* Set uniform size here */
-      height: 100px; /* Set uniform size here */
+      width: 100%;
+      height: 100%;
+      object-fit: contain; /* Automatically adjust logo size */
       border-radius: 50%;
       transition: transform 0.3s ease;
     }
@@ -209,10 +215,10 @@
           <img src="instagram.jpg" alt="Instagram Logo">
         </a>
         <a href="https://www.linkedin.com" target="_blank">
-          <img src="linkedInF.jpg" alt="LinkedIn Logo">
+          <img src="linkedIn.jpg" alt="LinkedIn Logo">
         </a>
         <a href="https://www.twitter.com" target="_blank">
-          <img src="ntwitter.jpg" alt="X Logo">
+          <img src="X logo.jpg" alt="X Logo">
         </a>
       </div>
     </div>
