--- a/index.html
+++ b/index.html
@@ -115,8 +115,12 @@
     }
     .social-links a {
       display: inline-block;
-      width: 100px; /* Container width */
-      height: 100px; /* Container height */
+      width: 100px; /* Default container size */
+      height: 100px; /* Default container size */
+    }
+    .social-links a.twitter {
+      width: 90px; /* Adjusted smaller size for X logo */
+      height: 90px; /* Adjusted smaller size for X logo */
     }
     .social-links a img {
       width: 100%;
@@ -217,7 +221,7 @@
         <a href="https://www.linkedin.com" target="_blank">
           <img src="linkedIn.jpg" alt="LinkedIn Logo">
         </a>
-        <a href="https://www.twitter.com" target="_blank">
+        <a href="https://www.twitter.com" class="twitter" target="_blank">
           <img src="X logo.jpg" alt="X Logo">
         </a>
       </div>
