--- a/index.html
+++ b/index.html
@@ -218,11 +218,11 @@
         <a href="https://www.instagram.com" target="_blank">
           <img src="instagram.jpg" alt="Instagram Logo">
         </a>
-        <a href="https://www.linkedin.com" target="_blank">
+        <a href="https://www.linkedin.com/in/arupam-biswas/" target="_blank">
           <img src="linkedIn.jpg" alt="LinkedIn Logo">
         </a>
         <a href="https://www.twitter.com" class="twitter" target="_blank">
-          <img src="X logo.jpg" alt="X Logo">
+          <img src="ntwitter.jpg" alt="X Logo">
         </a>
       </div>
     </div>
