--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
       height: 100px; /* Default container size */
     }
     .social-links a.twitter {
-      width: 90px; /* Adjusted smaller size for X logo */
-      height: 90px; /* Adjusted smaller size for X logo */
+      width: 100px; /* Adjusted smaller size for X logo */
+      height: 100px; /* Adjusted smaller size for X logo */
     }
     .social-links a img {
       width: 100%;
@@ -212,16 +212,16 @@
         Feel free to reach out regarding research collaborations, speaking engagements, or questions about my work. I'm always open to discussing new ideas and potential partnerships.
       </p>
       <div class="social-links">
-        <a href="https://www.facebook.com" target="_blank">
+        <a href="https://www.facebook.com/arupam.biswas.007/" target="_blank">
           <img src="facebook.jpg" alt="Facebook Logo">
         </a>
-        <a href="https://www.instagram.com" target="_blank">
+        <a href="https://www.instagram.com/arupambiswas/" target="_blank">
           <img src="instagram.jpg" alt="Instagram Logo">
         </a>
-        <a href="https://www.linkedin.com/in/arupam-biswas/" target="_blank">
+        <a href="https://www.linkedin.com/in/arupam-biswas" target="_blank">
           <img src="linkedIn.jpg" alt="LinkedIn Logo">
         </a>
-        <a href="https://www.twitter.com" class="twitter" target="_blank">
+        <a href="https://x.com/arupamb07" class="twitter" target="_blank">
           <img src="ntwitter.jpg" alt="X Logo">
         </a>
       </div>
