--- a/index.html
+++ b/index.html
@@ -115,12 +115,8 @@
     }
     .social-links a {
       display: inline-block;
-      width: 80px; /* Default container size */
-      height: 80px; /* Default container size */
-    }
-    .social-links a.twitter {
-      width: 75px; /* Adjusted smaller size for X logo */
-      height: 77px; /* Adjusted smaller size for X logo */
+      width: 90px; /* Consistent container size */
+      height: 90px; /* Consistent container size */
     }
     .social-links a img {
       width: 100%;
@@ -221,7 +217,7 @@
         <a href="https://www.linkedin.com/in/arupam-biswas" target="_blank">
           <img src="linkedIn.jpg" alt="LinkedIn Logo">
         </a>
-        <a href="https://x.com/arupamb07" class="twitter" target="_blank">
+        <a href="https://x.com/arupamb07" target="_blank">
           <img src="ntwitter.jpg" alt="X Logo">
         </a>
       </div>
