--- a/index.html
+++ b/index.html
@@ -115,18 +115,19 @@
     }
     .social-links a {
       display: inline-block;
-      width: 90px; /* Consistent container size */
-      height: 90px; /* Consistent container size */
+      width: 70px; /* Consistent container size */
+      height: 70px; /* Consistent container size */
     }
     .social-links a img {
       width: 100%;
       height: 100%;
-      object-fit: contain; /* Automatically adjust logo size */
+      object-fit: cover; /* Ensures all logos fit uniformly */
       border-radius: 50%;
-      transition: transform 0.3s ease;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
     .social-links a img:hover {
       transform: scale(1.1);
+      box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
     }
     .contact-form form {
       display: flex;
@@ -162,6 +163,9 @@
     @media (max-width: 768px) {
       .contact-info, .contact-form {
         width: 100%;
+      }
+      .social-links {
+        justify-content: center;
       }
     }
   </style>
