--- a/index.html
+++ b/index.html
@@ -115,13 +115,13 @@
     }
     .social-links a {
       display: inline-block;
-      width: 70px; /* Consistent container size */
-      height: 70px; /* Consistent container size */
+      width: 70px; /* Uniform container size */
+      height: 70px; /* Uniform container size */
     }
     .social-links a img {
       width: 100%;
       height: 100%;
-      object-fit: cover; /* Ensures all logos fit uniformly */
+      object-fit: contain; /* Uniform scaling */
       border-radius: 50%;
       transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
