--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
       height: 70px; /* Default size for all logos */
     }
     .social-links a.twitter {
-      width: 40px; /* Smaller size for Twitter */
-      height: 40px; /* Smaller size for Twitter */
+      width: 70px; /* Smaller size for Twitter */
+      height: 70px; /* Smaller size for Twitter */
     }
     .social-links a img {
       width: 100%;
@@ -226,7 +226,7 @@
           <img src="linkedIn.jpg" alt="LinkedIn Logo">
         </a>
         <a href="https://x.com/arupamb07" class="twitter" target="_blank">
-          <img src="ntwitter.jpg" alt="X Logo">
+          <img src="twitterFL.jpg" alt="X Logo">
         </a>
       </div>
     </div>
