--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
       </p>
       <div class="social-links">
         <a href="https://www.facebook.com/arupam.biswas.007/" class="facebook" target="_blank">
-          <img src="facebook.jpg" alt="Facebook Logo">
+          <img src="facebookff.jpg" alt="Facebook Logo">
         </a>
         <a href="https://www.instagram.com/arupambiswas/" target="_blank">
           <img src="instagram.jpg" alt="Instagram Logo">
