--- a/index.html
+++ b/index.html
@@ -160,6 +160,14 @@
     .contact-form button:hover {
       background-color: #1e40af;
     }
+    footer {
+      margin-top: 2rem;
+      padding: 1rem;
+      text-align: center;
+      font-size: 0.9rem;
+      color: #475569;
+      background-color: #f1f5f9;
+    }
     @media (max-width: 768px) {
       .contact-info, .contact-form {
         width: 100%;
@@ -212,8 +220,8 @@
         Feel free to reach out regarding research collaborations, speaking engagements, or questions about my work. I'm always open to discussing new ideas and potential partnerships.
       </p>
       <div class="social-links">
-        <a href="https://www.facebook.com/arupam.biswas.007/" class="facebook" target="_blank">
-          <img src="facebookff.jpg" alt="Facebook Logo">
+        <a href="https://www.facebook.com/arupam.biswas.007/" target="_blank">
+          <img src="facebook.jpg" alt="Facebook Logo">
         </a>
         <a href="https://www.instagram.com/arupambiswas/" target="_blank">
           <img src="instagram.jpg" alt="Instagram Logo">
@@ -221,7 +229,7 @@
         <a href="https://www.linkedin.com/in/arupam-biswas" target="_blank">
           <img src="linkedIn.jpg" alt="LinkedIn Logo">
         </a>
-        <a href="https://x.com/arupamb07" class="twitter" target="_blank">
+        <a href="https://x.com/arupamb07" target="_blank">
           <img src="twitterFL.jpg" alt="X Logo">
         </a>
       </div>
@@ -245,5 +253,8 @@
       </form>
     </div>
   </section>
+  <footer>
+    © 2025 Arupam Biswas. All rights reserved.
+  </footer>
 </body>
 </html>
