--- a/index.html
+++ b/index.html
@@ -182,7 +182,8 @@
   <nav>
     <h1>Welcome</h1>
     <ul>
-      <li><a href="#about">About</a></li>
+      <li><a href="#introduction">Introduction</a></li>
+      <li><a href="#education">Education</a></li>
       <li><a href="#research-interests">Research Interests</a></li>
       <li><a href="#projects">Projects</a></li>
       <li><a href="#gallery">Gallery</a></li>
@@ -191,8 +192,8 @@
     </ul>
   </nav>
   <section class="hero">
-    <div class="about-me">
-      <h2>About Me</h2>
+    <div class="introduction">
+      <h2>Introduction</h2>
       <p>
         Welcome to my personal website! I am Arupam Biswas, a passionate Neuroscience researcher dedicated to advancing our understanding of the brain and its complexities. 
         My work focuses on exploring innovative solutions to address challenges in neuroscience and related fields. On this platform, you'll find my projects, publications, 
