--- a/index.html
+++ b/index.html
@@ -54,16 +54,16 @@
       padding: 3rem;
       background: #f9fafb;
     }
-    .hero .about-me {
+    .hero .introduction {
       width: 50%;
       text-align: left;
     }
-    .hero .about-me h2 {
+    .hero .introduction h2 {
       font-size: 3rem;
       font-weight: 700;
       margin-bottom: 1.5rem;
     }
-    .hero .about-me p {
+    .hero .introduction p {
       font-size: 1.2rem;
       line-height: 1.8;
     }
@@ -192,7 +192,7 @@
     </ul>
   </nav>
   <section class="hero">
-    <div class="introduction">
+    <div class="introduction" id="introduction">
       <h2>Introduction</h2>
       <p>
         Welcome to my personal website! I am Arupam Biswas, a passionate Neuroscience researcher dedicated to advancing our understanding of the brain and its complexities. 
