--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
     </ul>
   </nav>
   <section class="hero">
-    <div class="introduction" id="introduction">
+    <div class="about me" id="about me">
       <h2>Hello</h2>
       <p>
         Welcome to my personal website! I am Arupam Biswas, a passionate Neuroscience researcher dedicated to advancing our understanding of the brain and its complexities. 
