--- a/index.html
+++ b/index.html
@@ -193,9 +193,9 @@
   </nav>
   <section class="hero">
     <div class="about me" id="about me">
-      <h2>Hello</h2>
+      <h2>Hi !!</h2>
       <p>
-        Welcome to my personal website! I am Arupam Biswas, a passionate Neuroscience researcher dedicated to advancing our understanding of the brain and its complexities. 
+        Welcome to my personal website! I'm Arupam Biswas, a passionate neuroscience researcher dedicated to advancing our understanding of the brain and its complexities. 
         My work focuses on exploring innovative solutions to address challenges in neuroscience and related fields. On this platform, you'll find my projects, publications, 
         and other resources that reflect my journey as a researcher.
       </p>
