--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
     </div>
     <div class="contact-form">
       <h2>Contact Me</h2>
-      <form action="#" method="POST">
+      <form action="https://formspree.io/f/your-form-id" method="POST">
         <label for="name">Name</label>
         <input type="text" id="name" name="name" required placeholder="Your Name">
         <label for="email">Email</label>
