--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 </head>
 <body>
   <nav>
-    <h1>Welcome</h1>
+    <h1>Arupam Biswas</h1>
     <ul class="menu">
       <li><a href="#about-me">About Me</a></li>
       <li><a href="#education">Education</a></li>
