--- a/index.html
+++ b/index.html
@@ -224,11 +224,9 @@
   </nav>
   <section class="hero" id="about-me">
     <div class="about-me">
-      <h2>Hi !!</h2>
+      <h2>Hello, </h2>
       <p>
-        Welcome to my personal website! I'm Arupam Biswas, a passionate neuroscience researcher dedicated to advancing our understanding of the brain and its complexities. 
-        My work focuses on exploring innovative solutions to address challenges in neuroscience and related fields. On this platform, you'll find my projects, publications, 
-        and other resources that reflect my journey as a researcher.
+        Welcome to my website! I'm Arupam Biswas, a dedicated neuroscience researcher exploring the brain's complexities. Here, you'll find my projects, publications, and innovative solutions in neuroscience. Enjoy your visit!
       </p>
     </div>
     <div class="profile-image">
