--- a/index.html
+++ b/index.html
@@ -28,11 +28,6 @@
       font-weight: 700;
       font-size: 1.5rem;
     }
-    nav .menu {
-      display: flex;
-      align-items: center;
-      gap: 1.8rem;
-    }
     nav ul {
       list-style: none;
       display: flex;
@@ -50,34 +45,6 @@
     nav ul li a:hover {
       color: #1d4ed8;
     }
-    .mobile-menu-icon {
-      display: none;
-      font-size: 1.8rem;
-      cursor: pointer;
-    }
-    .dropdown {
-      display: none;
-      flex-direction: column;
-      gap: 1rem;
-      background: white;
-      position: absolute;
-      top: 100%;
-      left: 0;
-      width: 100%;
-      padding: 1rem 2rem;
-      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    }
-    .dropdown li {
-      font-weight: 600;
-      font-size: 1rem;
-    }
-    .dropdown li a {
-      text-decoration: none;
-      color: #0f172a;
-    }
-    .dropdown li a:hover {
-      color: #1d4ed8;
-    }
     .hero {
       display: flex;
       flex-direction: row;
@@ -92,7 +59,7 @@
       text-align: left;
     }
     .hero .about-me h2 {
-      font-size: 3rem;
+      font-size: 3.5rem;
       font-weight: 700;
       margin-bottom: 1.5rem;
     }
@@ -107,27 +74,26 @@
       align-items: center;
     }
     .hero .profile-image img {
-      width: 90%;
-      max-width: 500px;
-      border-radius: 10px;
+      width: 100%; /* Increased the size for a bigger profile picture */
+      max-width: 600px; /* Bigger maximum size */
+      border-radius: 15px;
       object-fit: cover;
       box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
     }
     .get-in-touch {
-      display: flex;
-      justify-content: space-between;
-      align-items: flex-start;
-      flex-wrap: wrap;
       padding: 3rem;
       background: #ffffff;
     }
-    .contact-info, .contact-form {
-      width: 48%;
-    }
-    .contact-info h2, .contact-form h2 {
-      font-size: 2rem;
+    .get-in-touch h2 {
+      font-size: 2.5rem;
       font-weight: 700;
       margin-bottom: 1.5rem;
+      text-align: center;
+    }
+    .contact-info, .contact-form {
+      width: 100%;
+      max-width: 800px;
+      margin: 0 auto;
     }
     .contact-info p {
       font-size: 1rem;
@@ -142,14 +108,15 @@
       text-decoration: underline;
     }
     .social-links {
-      margin-top: 2rem;
       display: flex;
+      justify-content: center;
       gap: 1.5rem;
+      margin-top: 2rem;
     }
     .social-links a {
       display: inline-block;
-      width: 100px;
-      height: 100px;
+      width: 80px; /* Smaller size for social logos */
+      height: 80px;
     }
     .social-links a img {
       width: 100%;
@@ -162,6 +129,37 @@
       transform: scale(1.1);
       box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.3);
     }
+    .contact-form form {
+      display: flex;
+      flex-direction: column;
+    }
+    .contact-form label {
+      font-size: 1rem;
+      font-weight: 600;
+      margin-bottom: 0.5rem;
+    }
+    .contact-form input, .contact-form textarea {
+      margin-bottom: 1rem;
+      padding: 0.8rem;
+      border: 1px solid #cbd5e1;
+      border-radius: 5px;
+      font-size: 1rem;
+      width: 100%;
+    }
+    .contact-form button {
+      padding: 0.8rem 2rem;
+      background-color: #1d4ed8;
+      border: none;
+      border-radius: 5px;
+      color: white;
+      font-weight: 600;
+      font-size: 1rem;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
+    .contact-form button:hover {
+      background-color: #1e40af;
+    }
     footer {
       margin-top: 2rem;
       padding: 1rem;
@@ -170,21 +168,7 @@
       color: #475569;
       background-color: #f1f5f9;
     }
-
-    /* Media Query for Mobile Devices */
     @media (max-width: 768px) {
-      .menu {
-        display: none;
-      }
-      .mobile-menu-icon {
-        display: block;
-      }
-      .dropdown {
-        display: none;
-      }
-      .dropdown.active {
-        display: flex;
-      }
       .hero {
         flex-direction: column;
         text-align: center;
@@ -192,28 +176,16 @@
       .hero .about-me, .hero .profile-image {
         width: 100%;
       }
-      .contact-info, .contact-form {
-        width: 100%;
-      }
       .social-links {
-        justify-content: center;
+        flex-direction: row;
       }
     }
   </style>
 </head>
 <body>
   <nav>
-    <h1>Arupam Biswas</h1>
-    <ul class="menu">
-      <li><a href="#about-me">About Me</a></li>
-      <li><a href="#education">Education</a></li>
-      <li><a href="#research-interests">Research Interests</a></li>
-      <li><a href="#projects">Projects</a></li>
-      <li><a href="#resources">Resources</a></li>
-      <li><a href="#contact">Get in Touch</a></li>
-    </ul>
-    <div class="mobile-menu-icon" id="menu-icon">☰</div>
-    <ul class="dropdown" id="dropdown-menu">
+    <h1>Welcome</h1>
+    <ul>
       <li><a href="#about-me">About Me</a></li>
       <li><a href="#education">Education</a></li>
       <li><a href="#research-interests">Research Interests</a></li>
@@ -224,9 +196,11 @@
   </nav>
   <section class="hero" id="about-me">
     <div class="about-me">
-      <h2>Hello, </h2>
+      <h2>Hi !!</h2>
       <p>
-        Welcome to my website! I'm Arupam Biswas, a dedicated neuroscience researcher exploring the brain's complexities. Here, you'll find my projects, publications, and innovative solutions in neuroscience. Enjoy your visit!
+        Welcome to my personal website! I'm Arupam Biswas, a passionate neuroscience researcher dedicated to advancing our understanding of the brain and its complexities. 
+        My work focuses on exploring innovative solutions to address challenges in neuroscience and related fields. On this platform, you'll find my projects, publications, 
+        and other resources that reflect my journey as a researcher.
       </p>
     </div>
     <div class="profile-image">
@@ -234,8 +208,8 @@
     </div>
   </section>
   <section class="get-in-touch" id="contact">
+    <h2>Get in Touch</h2>
     <div class="contact-info">
-      <h2>Get in Touch</h2>
       <p><strong>Email:</strong> arupambiswas007@gmail.com</p>
       <p><strong>Lab:</strong> Dr Ishwariya Venkatesh, <a href="https://www.ccmb.res.in/research/labs/venkatesh-lab" target="_blank">Venkatesh Lab</a> CSIR-CCMB</p>
       <p><strong>Address:</strong><br>
@@ -266,7 +240,7 @@
     </div>
     <div class="contact-form">
       <h2>Contact Me</h2>
-      <form action="https://formspree.io/f/your-form-id" method="POST">
+      <form action="#" method="POST">
         <label for="name">Name</label>
         <input type="text" id="name" name="name" required placeholder="Your Name">
         <label for="email">Email</label>
@@ -282,14 +256,5 @@
   <footer>
     © 2025 Arupam Biswas. All rights reserved.
   </footer>
-
-  <script>
-    const menuIcon = document.getElementById('menu-icon');
-    const dropdownMenu = document.getElementById('dropdown-menu');
-
-    menuIcon.addEventListener('click', () => {
-      dropdownMenu.classList.toggle('active');
-    });
-  </script>
 </body>
 </html>
